[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/Player/Blue.png" type="Texture" id=1]
[ext_resource path="res://Scripts/3D/Player3D.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Enemies/RedSlime.png" type="Texture" id=3]
[ext_resource path="res://Scripts/PatrolingEnemy3D.gd" type="Script" id=4]
[ext_resource path="res://Shaders/ColorOverlay.tres" type="Shader" id=5]
[ext_resource path="res://Scripts/Effects/ColorOverlay.gd" type="Script" id=6]

[sub_resource type="QuadMesh" id=1]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.500301, 0.5036, 1 )

[sub_resource type="SphereShape" id=2]
radius = 1.6

[sub_resource type="CubeMesh" id=4]

[sub_resource type="BoxShape" id=5]

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 5 )

[node name="Spatial" type="Spatial"]

[node name="Ground" type="MeshInstance" parent="."]
transform = Transform( 20, 0, 0, 0, -8.74228e-07, 1, 0, -20, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )

[node name="StaticBody" type="StaticBody" parent="Ground"]

[node name="CollisionShape" type="CollisionShape" parent="Ground/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, -4.44089e-16, 0, 1.42109e-13, 1, 0, 4.41315e-09, -1.00961 )
shape = SubResource( 3 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.887743, 0.460339, 0, -0.460339, 0.887743, 0, 18.0626, 29.4589 )

[node name="Player3D" type="KinematicBody" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Player3D"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0 )
shape = SubResource( 2 )

[node name="Sprites" type="Spatial" parent="Player3D"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0 )

[node name="Sprite3D" type="Sprite3D" parent="Player3D/Sprites"]
pixel_size = 0.1
alpha_cut = 1
texture = ExtResource( 1 )

[node name="Cube" type="StaticBody" parent="."]
transform = Transform( 8.2311, 0, 0, 0, 7.10525, 0, 0, 0, 11.8255, 16.4047, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Cube"]
mesh = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="Cube"]
shape = SubResource( 5 )

[node name="Cube2" type="StaticBody" parent="."]
transform = Transform( 8.2311, 0, 0, 0, 17.01, 0, 0, 0, 11.8255, -16.9837, 5.7125, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Cube2"]
mesh = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="Cube2"]
shape = SubResource( 5 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.965218, -0.0370507, 0.258809, -0.151314, 0.728107, 0.668554, -0.213211, -0.684461, 0.697175, 0, 15.3459, 0 )
shadow_enabled = true

[node name="Enemy3D" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.76297, 0, -4.35265 )
collision_layer = 2
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="Enemy3D"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0 )
shape = SubResource( 2 )

[node name="Sprites" type="Spatial" parent="Enemy3D"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0 )

[node name="Sprite3D" type="Sprite3D" parent="Enemy3D/Sprites"]
pixel_size = 0.1
alpha_cut = 1
texture = ExtResource( 3 )

[node name="Body" type="Area" parent="Enemy3D"]

[node name="CollisionShape" type="CollisionShape" parent="Enemy3D/Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0 )
shape = SubResource( 2 )

[node name="ColorOverlay" type="CanvasLayer" parent="."]
layer = 100
script = ExtResource( 6 )

[node name="ColorOverlayBlue" type="ColorRect" parent="ColorOverlay"]
visible = false
material = SubResource( 6 )
margin_right = 800.0
margin_bottom = 450.0
color = Color( 0, 0.788235, 1, 1 )

[node name="ColorOverlayRed" type="ColorRect" parent="ColorOverlay"]
visible = false
material = SubResource( 6 )
margin_right = 800.0
margin_bottom = 450.0
color = Color( 1, 0.141176, 0, 1 )

[node name="ColorOverlayGreen" type="ColorRect" parent="ColorOverlay"]
visible = false
material = SubResource( 6 )
margin_right = 800.0
margin_bottom = 450.0
color = Color( 0.545098, 1, 0, 1 )

[connection signal="body_entered" from="Enemy3D/Body" to="Enemy3D" method="_on_Body_body_entered"]
